@@ -1,8 +1,7 @@
 package lee.journalj.ui;
 
 import javafx.application.Platform;
-import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
+import javafx.collections.*;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
@@ -11,6 +10,7 @@ import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
 import javafx.scene.web.HTMLEditor;
 import javafx.scene.control.Label;
+import javafx.scene.control.Tab;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.control.TableColumn;
@@ -28,10 +28,23 @@ import lee.journalj.data.repository.implementation.HomeworkRepositoryImplementat
 import lee.journalj.data.repository.implementation.ScheduleRepositoryImplementation;
 import lee.journalj.service.HomeworkService;
 import lee.journalj.service.ScheduleService;
-
 import java.time.DayOfWeek;
 import java.time.format.DateTimeParseException;
 import java.time.temporal.TemporalAdjusters;
+import javafx.collections.FXCollections; // Добавлен недостающий импорт
+import javafx.collections.ObservableList;
+import javafx.scene.Node;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.DatePicker;
+import javafx.scene.control.Dialog;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.Alert;
+import javafx.scene.layout.GridPane;
+import javafx.scene.layout.HBox;
+import javafx.scene.layout.VBox;
+import javafx.scene.control.TableView;
+import javafx.scene.control.cell.PropertyValueFactory;
+
 
 /**
  * Вкладка расписания с отображением и управлением уроками.
@@ -43,53 +56,92 @@ public class ScheduleTab implements TabContent {
     private TableView<Lesson> currentTableView;
     private VBox mainContainer;
     private DatePicker datePicker;
-    private LocalDate currentDate;
     private Node currentView;
-    private final VBox content;
+    private VBox content;
     private final ComboBox<DayOfWeek> dayComboBox;
     private final ComboBox<String> subjectComboBox;
     private final ObservableList<Lesson> lessons;
     private final TableView<Lesson> lessonsTable;
-    private HBox weekView;
-    private LocalDate weekStart;
+    private static final String VIEW_TYPE_WEEK = "Неделя";
+    private static final String VIEW_TYPE_TABLE = "Таблица";
+    private static final String[] VIEW_TYPES = {VIEW_TYPE_WEEK, VIEW_TYPE_TABLE};
+
+    private LocalDate currentDate = LocalDate.now();
+    private LocalDate weekStart = currentDate.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
+    private String currentViewType = VIEW_TYPE_WEEK; // Тип текущего представления по умолчанию
     
+    // Для табличного представления
+    private TableView<Lesson> tableView;
+    private HBox weekView;
+
     /**
      * Конструктор с внедрением зависимостей.
      */
-    public ScheduleTab() {
+    public ScheduleTab(ScheduleService scheduleService, HomeworkService homeworkService) {
         // Инициализация сервисов
-        ScheduleRepositoryImplementation scheduleRepo = new ScheduleRepositoryImplementation();
-        HomeworkRepositoryImplementation homeworkRepo = new HomeworkRepositoryImplementation();
-        scheduleService = new ScheduleService(scheduleRepo, homeworkRepo);
-        homeworkService = new HomeworkService(homeworkRepo);
+        this.scheduleService = scheduleService;
+        this.homeworkService = homeworkService;
 
         // Инициализация списка уроков
-        lessons = FXCollections.observableArrayList();
+        this.lessons = FXCollections.observableArrayList();
 
+        // Создаем таблицу уроков
+        tableView = new TableView<>();
+
+        dayComboBox = new ComboBox<>();
+        subjectComboBox = new ComboBox<>();
+        lessonsTable = new TableView<>();
+        
+        // Создаем контейнер для табличного представления
+        currentTableView = new TableView<>();
+        currentTableView.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
+        
         // Создаем основной контейнер
         mainContainer = new VBox(10);
         mainContainer.setStyle("-fx-padding: 20px; -fx-background-color: #f8f9fa;");
 
         // Создаем контейнер для контента
-        content = new VBox(10);
+        this.content = new VBox(10);
         content.setStyle("-fx-padding: 20px;");
+        VBox initialView = createInitialView();
+        content.getChildren().add(initialView);
 
+
+        // Создаем datePicker
+        datePicker = new DatePicker(LocalDate.now());
+        datePicker.setShowWeekNumbers(true);
+        
+        // Устанавливаем обработчик изменения даты
+        datePicker.setOnAction(e -> updateCurrentTableView());
+        
         // Добавляем контент в основной контейнер
         mainContainer.getChildren().add(content);
 
+        // Инициализируем компоненты
+        initialize();
+    }
+
+    /**
+     * Инициализирует вкладку расписания
+     */
+    private void initialize() {
+        // Настраиваем колонки таблицы
+        setupTableColumns();
+        tableView.setItems(lessons);
+        
+        // Устанавливаем обработчик изменения даты
+        datePicker.setOnAction(e -> updateCurrentTableView());
+        
         // Устанавливаем текущую дату
         currentDate = LocalDate.now();
         weekStart = currentDate.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
-
-        dayComboBox = new ComboBox<>();
-        subjectComboBox = new ComboBox<>();
-        lessonsTable = new TableView<>();
-
-        // Загружаем начальные данные
-        refreshLessons();
         
         // Создаем начальное представление
         showWeek(currentDate);
+        
+        // Инициализируем контейнер для табличного представления
+        currentTableViewContainer = new VBox(10);
+        currentTableViewContainer.setStyle("-fx-padding: 20px;");
     }
     
     /**
@@ -101,39 +153,111 @@ public class ScheduleTab implements TabContent {
         updateWeekView();
         showWeek(currentDate);
     }
-    
+
     /**
-     * Инициализирует вкладку расписания
+     * Настраивает колонки таблицы уроков
      */
-    public void initialize() {
-        // Устанавливаем обработчик изменения даты
-        datePicker.setOnAction(e -> updateCurrentTableView());
-        
-        // Создаем начальный интерфейс с текущей неделей
-        LocalDate currentDate = LocalDate.now();
-        showWeek(currentDate);
-        
-        // Инициализируем текущую таблицу
-        updateCurrentTableView();
+    private void setupTableColumns() {
+        try {
+            // Очищаем существующие колонки
+            tableView.getColumns().clear();
+
+            // Колонка времени
+            TableColumn<Lesson, String> timeColumn = new TableColumn<>("Время");
+            timeColumn.setCellValueFactory(cellData -> {
+                LocalTime time = cellData.getValue().getStartTime();
+                return new SimpleObjectProperty<>(time != null ? formatTime(time) : "");
+            });
+
+            // Колонка дня недели
+            TableColumn<Lesson, String> dayColumn = new TableColumn<>("День");
+            dayColumn.setCellValueFactory(cellData -> {
+                String day = cellData.getValue().getDayOfWeek();
+                return new SimpleObjectProperty<>(day != null ? day : "");
+            });
+
+            // Колонка предмета
+            TableColumn<Lesson, String> subjectColumn = new TableColumn<>("Предмет");
+            subjectColumn.setCellValueFactory(new PropertyValueFactory<>("subject"));
+
+            // Колонка кабинета
+            TableColumn<Lesson, String> roomColumn = new TableColumn<>("Кабинет");
+            roomColumn.setCellValueFactory(new PropertyValueFactory<>("room"));
+
+            // Добавляем колонки в таблицу
+            tableView.getColumns().addAll(timeColumn, dayColumn, subjectColumn, roomColumn);
+
+            // Устанавливаем политику изменения размера колонок
+            tableView.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
+
+            // Добавляем обработчик сортировки
+            tableView.getSortOrder().addListener((ListChangeListener<TableColumn<Lesson, ?>>) change -> {
+                if (change.next()) {
+                    if (change.wasReplaced()) {
+                        sortLessons();
+                    }
+                }
+            });
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось настроить колонки таблицы: " + e.getMessage());
+        }
     }
     
+    private String formatTime(LocalTime time) {
+        return time != null ? time.toString() : "";
+    }
+
+    private void sortLessons() {
+        try {
+            List<Lesson> sortedLessons = new ArrayList<>(tableView.getItems());
+            sortedLessons.sort((lesson1, lesson2) -> {
+                String day1 = Lesson.normalizeDayOfWeek(lesson1.getDayOfWeek());
+                String day2 = Lesson.normalizeDayOfWeek(lesson2.getDayOfWeek());
+
+                int dayComparison = 0;
+                try {
+                    DayOfWeek d1 = DayOfWeek.valueOf(day1.toUpperCase());
+                    DayOfWeek d2 = DayOfWeek.valueOf(day2.toUpperCase());
+                    dayComparison = Integer.compare(d1.getValue(), d2.getValue());
+                } catch (IllegalArgumentException e) {
+                    dayComparison = day1.compareTo(day2);
+                }
+
+                if (dayComparison == 0 && lesson1.getStartTime() != null && lesson2.getStartTime() != null) {
+                    return lesson1.getStartTime().compareTo(lesson2.getStartTime());
+                }
+                return dayComparison;
+            });
+
+            tableView.getItems().setAll(sortedLessons);
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось отсортировать уроки: " + e.getMessage());
+        }
+    }
+
     private void reloadSchedule() {
         // Запоминаем текущую дату
         LocalDate currentDate = this.currentDate;
-        
+
         // Приводим getContent() к VBox, так как это контейнер с детьми
         VBox contentContainer = (VBox) getContent();
-        
+
         // Удаляем старое представление
         if (currentView != null) {
             contentContainer.getChildren().remove(currentView);
         }
-        
+
         // Создаем новое представление с актуальными данными
-        VBox newView = createDayView(currentDate);
+        Node newView;
+        if (VIEW_TYPE_WEEK.equals(currentViewType)) {
+            newView = createWeekView(weekStart);
+        } else {
+            newView = createDayView(currentDate);
+        }
+
         contentContainer.getChildren().add(newView);
         this.currentView = newView;
-        
+
         // Обновляем данные через сервис
         refreshLessons();
     }
@@ -168,6 +292,34 @@ public class ScheduleTab implements TabContent {
 
         navBox.getChildren().addAll(prevBtn, dateLabel, nextBtn);
         return navBox;
+    }
+
+    private HBox createViewSwitcher() {
+        HBox viewSwitcher = new HBox(10);
+        ComboBox<String> viewComboBox = new ComboBox<>();
+        viewComboBox.getItems().addAll(VIEW_TYPES);
+        viewComboBox.setValue(currentViewType);
+
+        viewComboBox.setOnAction(e -> {
+            currentViewType = viewComboBox.getValue();
+
+            if (VIEW_TYPE_WEEK.equals(currentViewType)) {
+                weekView = createWeekView(weekStart);
+                VBox parent = (VBox) getContent();
+                parent.getChildren().removeIf(node -> node instanceof HBox || node instanceof TableView);
+                parent.getChildren().add(weekView);
+            } else {
+                TableView<Lesson> tableView = createTableView();
+                VBox parent = (VBox) getContent();
+                parent.getChildren().removeIf(node -> node instanceof HBox || node instanceof TableView);
+                parent.getChildren().add(tableView);
+            }
+
+            refreshLessons();
+        });
+
+        viewSwitcher.getChildren().add(viewComboBox);
+        return viewSwitcher;
     }
 
     private void editHomework(Lesson lesson) {
@@ -322,7 +474,6 @@ public class ScheduleTab implements TabContent {
         dialog.setTitle("Новый урок");
         dialog.setHeaderText("Добавление нового урока");
 
-        // Создаем форму
         GridPane grid = new GridPane();
         grid.setHgap(10);
         grid.setVgap(10);
@@ -337,60 +488,52 @@ public class ScheduleTab implements TabContent {
         roomField.setPromptText("Кабинет");
 
         ComboBox<String> timeCombo = new ComboBox<>();
-        timeCombo.setPromptText("Время начала");
         timeCombo.getItems().addAll(
-            "08:30", "09:15", "10:00", "10:45", "11:30", "12:15",
-            "13:00", "13:45", "14:30", "15:15", "16:00"
+                "08:00", "08:45", "09:30", "10:15", "11:00",
+                "11:45", "12:30", "13:15", "14:00", "14:45", "15:30"
         );
+        timeCombo.setPromptText("Время начала");
+
+        ComboBox<String> endTimeCombo = new ComboBox<>();
+        endTimeCombo.getItems().addAll(
+                "08:45", "09:30", "10:15", "11:00", "11:45",
+                "12:30", "13:15", "14:00", "14:45", "15:30", "16:15"
+        );
+        endTimeCombo.setPromptText("Время окончания");
 
         grid.add(new Label("Предмет:"), 0, 0);
         grid.add(subjectCombo, 1, 0);
         grid.add(new Label("Кабинет:"), 0, 1);
         grid.add(roomField, 1, 1);
-        grid.add(new Label("Время:"), 0, 2);
+        grid.add(new Label("Время начала:"), 0, 2);
         grid.add(timeCombo, 1, 2);
+        grid.add(new Label("Время окончания:"), 0, 3);
+        grid.add(endTimeCombo, 1, 3);
 
         dialog.getDialogPane().setContent(grid);
+        ButtonType addButtonType = new ButtonType("Добавить", ButtonBar.ButtonData.OK_DONE);
+        dialog.getDialogPane().getButtonTypes().addAll(addButtonType, ButtonType.CANCEL);
 
-        // Добавляем кнопки
-        ButtonType saveButtonType = new ButtonType("Сохранить", ButtonBar.ButtonData.OK_DONE);
-        dialog.getDialogPane().getButtonTypes().addAll(saveButtonType, ButtonType.CANCEL);
-
-        // Валидация
-        Node saveButton = dialog.getDialogPane().lookupButton(saveButtonType);
-        saveButton.setDisable(true);
-
-        subjectCombo.valueProperty().addListener((obs, oldVal, newVal) -> {
-            saveButton.setDisable(newVal == null || newVal.trim().isEmpty() ||
-                                roomField.getText().trim().isEmpty() ||
-                                timeCombo.getValue() == null);
-        });
-
-        roomField.textProperty().addListener((obs, oldVal, newVal) -> {
-            saveButton.setDisable(subjectCombo.getValue() == null ||
-                                newVal.trim().isEmpty() ||
-                                timeCombo.getValue() == null);
-        });
-
-        timeCombo.valueProperty().addListener((obs, oldVal, newVal) -> {
-            saveButton.setDisable(subjectCombo.getValue() == null ||
-                                roomField.getText().trim().isEmpty() ||
-                                newVal == null);
-        });
-
-        // Обработка результата
         dialog.setResultConverter(dialogButton -> {
-            if (dialogButton == saveButtonType) {
+            if (dialogButton == addButtonType) {
                 Lesson lesson = new Lesson();
                 lesson.setSubject(subjectCombo.getValue());
                 lesson.setRoom(roomField.getText());
+
                 try {
                     lesson.setStartTime(LocalTime.parse(timeCombo.getValue()));
+                    lesson.setEndTime(LocalTime.parse(endTimeCombo.getValue()));
                 } catch (DateTimeParseException e) {
                     showError("Ошибка", "Неверный формат времени");
                     return null;
                 }
-                lesson.setDayOfWeek(date.getDayOfWeek().getDisplayName(TextStyle.FULL, new Locale("ru")));
+
+                // Устанавливаем дату и день недели
+                lesson.setDate(date);
+                lesson.setDayOfWeek(date.getDayOfWeek().getDisplayName(
+                        TextStyle.FULL, new Locale("ru")
+                ));
+
                 return lesson;
             }
             return null;
@@ -435,36 +578,28 @@ public class ScheduleTab implements TabContent {
         VBox dayBox = new VBox(10);
         dayBox.setPadding(new Insets(10));
         dayBox.setMinWidth(200);
-        dayBox.setStyle("-fx-background-color: #f8f9fa; -fx-border-color: #e9ecef; -fx-border-width: 1px; -fx-border-radius: 4px;");
+        dayBox.setStyle("-fx-background-color: white; -fx-border-color: #e9ecef; -fx-border-width: 1px;");
 
-        // Заголовок дня
         String dayName = date.getDayOfWeek().getDisplayName(TextStyle.FULL, new Locale("ru"));
         Label dayLabel = new Label(dayName);
         dayLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 14px;");
-        
-        // Дата
+
         Label dateLabel = new Label(date.format(DateTimeFormatter.ofPattern("dd.MM.yyyy")));
         dateLabel.setStyle("-fx-text-fill: #6c757d;");
 
-        // Контейнер для уроков
         VBox lessonsBox = new VBox(5);
         lessonsBox.setPadding(new Insets(5));
 
-        // Получаем уроки для этого дня
         List<Lesson> dayLessons = lessons.stream()
-            .filter(lesson -> {
-                String lessonDay = lesson.getDayOfWeek();
-                return lessonDay != null && lessonDay.equals(dayName);
-            })
-            .sorted(Comparator.comparing(Lesson::getStartTime))
-            .collect(Collectors.toList());
+                .filter(lesson -> lesson.getDate() != null && lesson.getDate().isEqual(date))
+                .sorted(Comparator.comparing(Lesson::getStartTime))
+                .collect(Collectors.toList());
 
-        // Добавляем карточки уроков
+        lessonsBox.getChildren().clear();
         for (Lesson lesson : dayLessons) {
             lessonsBox.getChildren().add(createLessonCard(lesson));
         }
 
-        // Кнопка добавления урока
         Button addButton = new Button("+ Добавить урок");
         addButton.setStyle("-fx-background-color: #28a745; -fx-text-fill: white; -fx-background-radius: 4px;");
         addButton.setOnAction(e -> {
@@ -536,87 +671,69 @@ public class ScheduleTab implements TabContent {
         alert.showAndWait();
     }
 
-    private VBox createInitialView() {
-        VBox initialView = new VBox(10);
-        initialView.getChildren().add(createNavigationHeader());
-        initialView.getChildren().add(createWeekView(currentDate));
-        return initialView;
+    private HBox createControlPanel() {
+        HBox controlPanel = new HBox(10);
+        controlPanel.setAlignment(Pos.CENTER_LEFT);
+
+        // Переключатель типов представления
+        ComboBox<String> viewTypeComboBox = new ComboBox<>();
+        viewTypeComboBox.getItems().addAll(VIEW_TYPES);
+        viewTypeComboBox.setValue(currentViewType);
+        viewTypeComboBox.setOnAction(e -> {
+            currentViewType = viewTypeComboBox.getValue();
+            reloadSchedule();
+        });
+
+        // Календарь для выбора даты
+        datePicker = new DatePicker(LocalDate.now());
+        datePicker.setShowWeekNumbers(true);
+        datePicker.setOnAction(e -> updateCurrentTableView());
+
+        // Панель с элементами управления
+        Label viewLabel = new Label("Представление:");
+        viewLabel.setStyle("-fx-font-weight: bold;");
+
+        controlPanel.getChildren().addAll(viewLabel, viewTypeComboBox, datePicker);
+        return controlPanel;
     }
 
-    private void refreshLessons() {
-        try {
-            List<Lesson> allLessons = scheduleService.getAllLessons();
-            lessons.clear();
-            lessons.addAll(allLessons);
-            
-            // Обновляем комбобоксы
-            List<String> subjects = scheduleService.getUniqueSubjects();
-            subjectComboBox.getItems().clear();
-            subjectComboBox.getItems().addAll(subjects);
-            
-            // Обновляем представление
-            Platform.runLater(() -> {
-                if (currentDate != null) {
-                    showWeek(currentDate);
-                }
-            });
-        } catch (Exception e) {
-            showError("Ошибка", "Не удалось загрузить расписание: " + e.getMessage());
-        }
-    }
-
-    private void updateWeekView() {
-        if (weekView != null) {
-            weekView.getChildren().clear();
-            for (int i = 0; i < 7; i++) {
-                LocalDate date = weekStart.plusDays(i);
-                VBox dayBox = createDayBox(date);
-                weekView.getChildren().add(dayBox);
-            }
-        }
-    }
-
-
-    private String getDefaultDayOfWeek() {
-        // Получаем день недели по умолчанию
-        String defaultDayOfWeek = "Понедельник";
-        
-        // Используем статический метод из класса Lesson
-        return Lesson.normalizeDayOfWeek(defaultDayOfWeek);
-    }
     
-    // Метод updateCurrentTableView обновляет текущую таблицу уроков
+    /**
+     * Создает табличное представление уроков
+     */
+    private TableView<Lesson> createTableView() {
+        TableView<Lesson> tableView = new TableView<>();
+        tableView.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
+
+        // Настройка колонок таблицы
+        setupTableColumns();
+        addTableColumns();
+        tableView.setItems(lessons);
+
+        // Сортируем уроки при инициализации
+        sortLessons();
+
+        return tableView;
+    }
+
+    
+    /**
+     * Обновляет текущее табличное представление с фильтрацией по выбранной дате
+     */
     private void updateCurrentTableView() {
-        if (currentTableView == null) return;
-        
-        List<Lesson> allLessons = scheduleService.getAllLessons();
-        LocalDate selectedDate = datePicker.getValue();
-        if (selectedDate == null) return;
-        
-        // Используем статический метод из класса Lesson для нормализации дня недели
-        String dayOfWeek = Lesson.normalizeDayOfWeek(selectedDate.getDayOfWeek().getDisplayName(TextStyle.FULL, new Locale("ru")));
-        
-        // Обновляем данные в таблице
-        List<Lesson> filteredLessons = allLessons.stream()
-            .filter(l -> {
-                if (l.getDayOfWeek() == null) return false;
-                // Сравниваем нормализованные значения
-                boolean match = Lesson.normalizeDayOfWeek(l.getDayOfWeek()).equals(dayOfWeek);
-                
-                // Добавлена дополнительная проверка для отладки
-                if (!match) {
-                    System.out.println("Не совпадают дни недели:");
-                    System.out.println("- Урок: " + l.getDayOfWeek() + " (исходное)");
-                    System.out.println("- Урок: " + Lesson.normalizeDayOfWeek(l.getDayOfWeek()) + " (нормализованное)");
-                    System.out.println("- Фильтр: " + dayOfWeek + " (исходное)");
-                    System.out.println("- Фильтр: " + Lesson.normalizeDayOfWeek(dayOfWeek) + " (нормализованное)");
-                }
-                
-                return match;
-            })
-            .toList();
-        
-        currentTableView.getItems().setAll(filteredLessons);
+        try {
+            LocalDate selectedDate = datePicker.getValue();
+            if (selectedDate == null) return;
+
+            List<Lesson> filteredLessons = lessons.stream()
+                    .filter(lesson -> lesson.getDate() != null && lesson.getDate().isEqual(selectedDate))
+                    .sorted(Comparator.comparing(Lesson::getStartTime))
+                    .collect(Collectors.toList());
+
+            tableView.getItems().setAll(filteredLessons);
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось обновить таблицу: " + e.getMessage());
+        }
     }
     
     /**
@@ -631,6 +748,52 @@ public class ScheduleTab implements TabContent {
         // Например, можно вызвать updateCurrentTableView(), если это уместно
         updateCurrentTableView();
     }
+
+    private void refreshLessons() {
+        try {
+            List<Lesson> allLessons = scheduleService.getAllLessons();
+            System.out.println("Загружено уроков: " + allLessons.size());
+            lessons.clear();
+            lessons.addAll(allLessons);
+
+            Platform.runLater(() -> {
+                if (VIEW_TYPE_WEEK.equals(currentViewType)) {
+                    updateWeekView();
+                } else {
+                    updateTableView();
+                }
+            });
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось загрузить расписание: " + e.getMessage());
+        }
+    }
+
+    private void updateWeekView() {
+        try {
+            if (weekView != null) {
+                weekView.getChildren().clear(); // Очищаем старые дни
+
+                for (int i = 0; i < 7; i++) {
+                    LocalDate date = weekStart.plusDays(i);
+                    VBox dayBox = createDayBox(date);
+                    weekView.getChildren().add(dayBox);
+                }
+            }
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось обновить недельное представление: " + e.getMessage());
+        }
+    }
+
+
+
+    private String getDefaultDayOfWeek() {
+        // Получаем день недели по умолчанию
+        String defaultDayOfWeek = "Понедельник";
+        
+        // Используем статический метод из класса Lesson
+        return Lesson.normalizeDayOfWeek(defaultDayOfWeek);
+    }
+
     
     /**
      * Обновляет текущую таблицу уроков
@@ -781,25 +944,81 @@ public class ScheduleTab implements TabContent {
      * Отображает неделю с заданной даты
      */
     private void showWeek(LocalDate startDate) {
-        if (startDate == null) {
-            startDate = LocalDate.now();
+        try {
+            if (startDate == null) startDate = LocalDate.now();
+            currentDate = startDate;
+            weekStart = startDate.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
+
+            // Очищаем только weekView, не трогая controlPanel
+            if (weekView != null) {
+                weekView.getChildren().clear();
+                weekView.getChildren().addAll(createWeekView(weekStart).getChildren());
+            } else {
+                weekView = createWeekView(weekStart);
+                VBox initialView = (VBox) getContent();
+                initialView.getChildren().add(weekView);
+            }
+
+            refreshLessons();
+
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось показать неделю: " + e.getMessage());
         }
+    }
+    
+    // Метод для установки текущего типа представления
+    public void setViewType(String viewType) {
+        this.currentViewType = viewType;
         
-        currentDate = startDate;
-        weekStart = startDate.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
-        
-        // Очищаем текущий контент
-        content.getChildren().clear();
-        
-        // Добавляем навигацию
-        content.getChildren().add(createNavigationHeader());
-        
-        // Создаем и добавляем представление недели
-        HBox weekView = createWeekView(weekStart);
-        content.getChildren().add(weekView);
-        
-        // Обновляем данные
-        refreshLessons();
+        // Обновляем представление при смене типа
+        showWeek(currentDate);
+    }
+    
+    // Метод для получения текущего типа представления
+    public String getViewType() {
+        return currentViewType;
+    }
+
+
+
+    private VBox createInitialView() {
+        VBox initialView = new VBox(10);
+        initialView.getChildren().add(createNavigationHeader());
+
+        // Панель управления (включая кнопки переключения недель)
+        HBox controlPanel = createNavigationControls(); // Получаем HBox с кнопками
+        initialView.getChildren().add(controlPanel); // Добавляем в интерфейс
+
+        // Добавляем недельное представление
+        if (VIEW_TYPE_WEEK.equals(currentViewType)) {
+            weekView = createWeekView(weekStart);
+            initialView.getChildren().add(weekView);
+        } else {
+            initialView.getChildren().add(createTableView());
+        }
+
+        return initialView;
+    }
+
+    private HBox createNavigationControls() {
+        HBox controls = new HBox(10);
+        controls.setAlignment(Pos.CENTER);
+
+        Button prevWeekBtn = new Button("← Неделя назад");
+        Button nextWeekBtn = new Button("Следующая неделя →");
+
+        prevWeekBtn.setOnAction(e -> {
+            currentDate = currentDate.minusWeeks(1);
+            showWeek(currentDate);
+        });
+
+        nextWeekBtn.setOnAction(e -> {
+            currentDate = currentDate.plusWeeks(1);
+            showWeek(currentDate);
+        });
+
+        controls.getChildren().addAll(prevWeekBtn, nextWeekBtn);
+        return controls;
     }
     
     private void showDay(LocalDate dayDate) {
@@ -827,19 +1046,20 @@ public class ScheduleTab implements TabContent {
         return content;
     }
 
-    private HBox createWeekView(LocalDate startDate) {
-        HBox weekContainer = new HBox(10);
-        weekContainer.setPadding(new Insets(10));
-        weekContainer.setStyle("-fx-background-color: white; -fx-border-color: #e9ecef; -fx-border-width: 1px; -fx-border-radius: 4px;");
+    private HBox createWeekView(LocalDate weekStart) {
+        HBox weekBox = new HBox(10);
+        weekBox.setPadding(new Insets(10));
+        weekBox.setStyle("-fx-background-color: #f8f9fa; -fx-border-color: #e9ecef; -fx-border-width: 1px;");
 
-        // Создаем представление для каждого дня недели
         for (int i = 0; i < 7; i++) {
-            LocalDate date = startDate.plusDays(i);
+            LocalDate date = weekStart.plusDays(i);
             VBox dayBox = createDayBox(date);
-            weekContainer.getChildren().add(dayBox);
+            if (dayBox != null) {
+                weekBox.getChildren().add(dayBox);
+            }
         }
 
-        return weekContainer;
+        return weekBox;
     }
 
     private boolean showConfirmation(String title, String content) {
@@ -864,48 +1084,50 @@ public class ScheduleTab implements TabContent {
         dayView.setPadding(new Insets(20));
         dayView.setStyle("-fx-background-color: white; -fx-border-color: #e9ecef; -fx-border-width: 1px; -fx-border-radius: 4px;");
 
-        // Заголовок
-        Label titleLabel = new Label(date.getDayOfWeek().getDisplayName(TextStyle.FULL, new Locale("ru")) + 
-                                   ", " + date.format(DateTimeFormatter.ofPattern("dd.MM.yyyy")));
+        // Заголовок с датой и днем недели
+        String normalizedDayOfWeek = Lesson.normalizeDayOfWeek(date.getDayOfWeek().getDisplayName(TextStyle.FULL, new Locale("ru")));
+        String formattedDate = date.format(DateTimeFormatter.ofPattern("dd.MM.yyyy"));
+        Label titleLabel = new Label(normalizedDayOfWeek + ", " + formattedDate);
         titleLabel.setStyle("-fx-font-size: 18px; -fx-font-weight: bold;");
 
         // Таблица уроков
         TableView<Lesson> lessonsTable = new TableView<>();
         lessonsTable.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
 
+        // Колонка времени
         TableColumn<Lesson, String> timeColumn = new TableColumn<>("Время");
         timeColumn.setCellValueFactory(cellData -> {
             LocalTime time = cellData.getValue().getStartTime();
-            return new SimpleObjectProperty<>(time != null ? time.toString() : "");
+            return new SimpleObjectProperty<>(time != null ? formatTime(time) : "");
         });
 
+        // Колонка предмета
         TableColumn<Lesson, String> subjectColumn = new TableColumn<>("Предмет");
         subjectColumn.setCellValueFactory(new PropertyValueFactory<>("subject"));
 
+        // Колонка кабинета
         TableColumn<Lesson, String> roomColumn = new TableColumn<>("Кабинет");
         roomColumn.setCellValueFactory(new PropertyValueFactory<>("room"));
 
+        // Добавляем колонки в таблицу
         lessonsTable.getColumns().addAll(timeColumn, subjectColumn, roomColumn);
 
         // Фильтруем уроки для выбранного дня
-        String dayName = date.getDayOfWeek().getDisplayName(TextStyle.FULL, new Locale("ru"));
         List<Lesson> dayLessons = lessons.stream()
-            .filter(lesson -> {
-                String lessonDay = lesson.getDayOfWeek();
-                return lessonDay != null && lessonDay.equals(dayName);
-            })
-            .sorted(Comparator.comparing(Lesson::getStartTime))
-            .collect(Collectors.toList());
+                .filter(lesson -> {
+                    String lessonDay = lesson.getDayOfWeek();
+                    return lessonDay != null &&
+                            Lesson.normalizeDayOfWeek(lessonDay).equals(Lesson.normalizeDayOfWeek(normalizedDayOfWeek));
+                })
+                .sorted(Comparator.comparing(Lesson::getStartTime))
+                .collect(Collectors.toList());
 
-        lessonsTable.getItems().addAll(dayLessons);
+        lessonsTable.getItems().setAll(dayLessons);
 
         // Кнопка добавления урока
         Button addButton = new Button("+ Добавить урок");
         addButton.setStyle("-fx-background-color: #28a745; -fx-text-fill: white; -fx-background-radius: 4px;");
-        addButton.setOnAction(e -> {
-            showAddLessonDialog(date);
-            refreshLessons();
-        });
+        addButton.setOnAction(e -> showAddLessonDialog(date));
 
         dayView.getChildren().addAll(titleLabel, lessonsTable, addButton);
         return dayView;
@@ -1001,4 +1223,49 @@ public class ScheduleTab implements TabContent {
             }
         });
     }
-}
+
+    private void addTableColumns() {
+        // Колонка времени
+        TableColumn<Lesson, String> timeColumn = new TableColumn<>("Время");
+        timeColumn.setCellValueFactory(cellData -> {
+            LocalTime time = cellData.getValue().getStartTime();
+            return new SimpleObjectProperty<>(time != null ? time.toString() : "");
+        });
+
+        // Колонка дня недели
+        TableColumn<Lesson, String> dayColumn = new TableColumn<>("День");
+        dayColumn.setCellValueFactory(cellData -> {
+            String day = cellData.getValue().getDayOfWeek();
+            return new SimpleObjectProperty<>(day != null ? day : "");
+        });
+
+        // Колонка предмета
+        TableColumn<Lesson, String> subjectColumn = new TableColumn<>("Предмет");
+        subjectColumn.setCellValueFactory(new PropertyValueFactory<>("subject"));
+
+        // Колонка кабинета
+        TableColumn<Lesson, String> roomColumn = new TableColumn<>("Кабинет");
+        roomColumn.setCellValueFactory(new PropertyValueFactory<>("room"));
+
+        // Добавляем колонки в таблицу
+        tableView.getColumns().addAll(timeColumn, dayColumn, subjectColumn, roomColumn);
+    }
+
+
+    private void updateTableView() {
+        try {
+            LocalDate selectedDate = datePicker.getValue();
+            if (selectedDate == null) return;
+
+            // Фильтруем уроки по конкретной дате
+            List<Lesson> filteredLessons = lessons.stream()
+                    .filter(lesson -> lesson.getDate() != null && lesson.getDate().isEqual(selectedDate))
+                    .sorted(Comparator.comparing(Lesson::getStartTime))
+                    .collect(Collectors.toList());
+
+            tableView.getItems().setAll(filteredLessons);
+        } catch (Exception e) {
+            showError("Ошибка", "Не удалось обновить таблицу: " + e.getMessage());
+        }
+    }
+    }
